integrate custom items with loot tables

--- a/src/main/resources/data/minecraft/tags/enchantment/treasure.json
+++ b/src/main/resources/data/minecraft/tags/enchantment/treasure.json
@@ -5,6 +5,7 @@
     "minecraft:soul_speed",
     "minecraft:frost_walker",
     "minecraft:mending",
-    "minecraft:wind_burst"
+    "minecraft:wind_burst",
+    "meteorology:thor"
   ]
 }
