--- a/src/main/resources/data/minecraft/loot_table/gameplay/fishing/treasure.json
+++ b/src/main/resources/data/minecraft/loot_table/gameplay/fishing/treasure.json
@@ -64,8 +64,37 @@
               "options": "#minecraft:on_random_loot"
             }
           ],
+          "conditions": [
+            {
+              "condition": "minecraft:location_check",
+              "predicate": {
+                "biomes": "#minecraft:is_ocean"
+              }
+            }
+          ],
+          "name": "meteorology:flippers",
+          "weight": 5
+        },
+        {
+          "type": "minecraft:item",
+          "functions": [
+            {
+              "add": false,
+              "damage": {
+                "type": "minecraft:uniform",
+                "max": 0.5,
+                "min": 0.0
+              },
+              "function": "minecraft:set_damage"
+            },
+            {
+              "function": "minecraft:enchant_with_levels",
+              "levels": 30.0,
+              "options": "#minecraft:on_random_loot"
+            }
+          ],
           "name": "minecraft:bow",
-          "weight": 20
+          "weight": 15
         },
         {
           "type": "minecraft:item",
@@ -77,7 +106,7 @@
             }
           ],
           "name": "minecraft:book",
-          "weight": 20
+          "weight": 15
         },
         {
           "type": "minecraft:item",
@@ -90,7 +119,7 @@
               }
             }
           ],
-          "weight": 20
+          "weight": 25
         },
         {
           "type": "minecraft:item",
