fix enchantments showing up where they shouldn't

--- a/src/main/resources/data/minecraft/tags/enchantment/non_treasure.json
+++ b/src/main/resources/data/minecraft/tags/enchantment/non_treasure.json
@@ -35,6 +35,6 @@
     "minecraft:piercing",
     "minecraft:density",
     "minecraft:breach",
-    "meteorology:zoom"
+    "meteorology:thor"
   ]
 }
