--- a/src/main/resources/data/minecraft/tags/enchantment/treasure.json
+++ b/src/main/resources/data/minecraft/tags/enchantment/treasure.json
@@ -6,6 +6,7 @@
     "minecraft:frost_walker",
     "minecraft:mending",
     "minecraft:wind_burst",
-    "meteorology:thor"
+    "meteorology:summoner",
+    "meteorology:zoom"
   ]
 }
